<resources>
    <string name="app_name">Daily Mood</string>
    <string name="hello_label">Привет!</string>
    <string name="please_say_yo_name">Скажи, пожалуйста, своё имя.Хочу \n знать, как к тебе обращаться)</string>
    <string name="name_hint">Имя</string>
    <string name="btn_confirm_label">Подтвердить</string>
    <string name="go_label">Поехали!</string>
    <string name="good_morning_label">Доброе утро, Имя \n Пользователя!</string>
    <string name="and_then_label">Давай скорее узнаем твой \n настрой на сегодня, у меня уже \n есть кое-что для тебя в запасе!</string>
    <string name="hold_to_voice_label">Зажми для записи</string>
    <string name="how_you_sleep_question">Как тебе сегодня \n спалось?</string>
    <string name="sleep_hint">Постарайся ответить несколькими словами, чтобы мне легче было определить твое настроение.</string>
    <string name="time_record_label">00:01</string>
    <string name="result_label">Похоже, настрой у тебя сегодня - просто огонь!</string>
    <string name="and_then_mood_label">Читай предсказание и вперед покорять день! А я в этом тебе буду помогать всеми силами)</string>
    <string name="read_prediction">Читать предсказание</string>
    <string name="prediction_text">Не отказывай себе сегодня ни в еде, ни в алкоголе, если хочется.</string>
    <string name="then_text">" Ну всё, еще увидимся в строке уведомлений, а тебе пора мощно ворваться в этот день!"</string>
    <string name="less_go_label">Let\'s-гoушки</string>
    <string name="save_label">Сохранить</string>
    <string name="go_back_label">Назад</string>
    <string name="name_label">Имя:</string>
    <string name="morning_push_label">Время утреннего уведомления:</string>
    <string name="period_push_label">Период уведомлений днём:</string>

    <string-array name="minutes">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="morning_pushes">
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
    </string-array>

    <string-array name="periods">
        <item>1 час</item>
        <item>3 часа</item>
        <item>6 часов</item>
        <item>8 часов</item>
    </string-array>
</resources>