<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="20dp"
        android:src="@drawable/back_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/name_label"
        android:textColor="@color/my_black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintStart_toStartOf="@id/et_name" />

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/et_back"
        android:hint="@string/name_hint"
        android:paddingStart="50dp"
        android:paddingLeft="50dp"
        android:textColor="@color/my_black"
        android:textColorHint="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/time_morning_push_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/morning_push_label"
        android:textColor="@color/my_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/name_label_tv"
        app:layout_constraintTop_toBottomOf="@id/et_name" />

    <Spinner
        android:id="@+id/spinner_morning_pushes_hours"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_back"
        android:entries="@array/morning_pushes"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@id/time_morning_push_label_tv"
        app:layout_constraintTop_toBottomOf="@id/time_morning_push_label_tv"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/semicolon_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:text=":"
        android:textColor="@color/my_black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@id/spinner_morning_pushes_hours"
        app:layout_constraintStart_toEndOf="@id/spinner_morning_pushes_hours"
        app:layout_constraintTop_toTopOf="@id/spinner_morning_pushes_hours" />

    <Spinner
        android:id="@+id/spinner_morning_pushes_minutes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_back"
        android:entries="@array/minutes"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@id/et_name"
        app:layout_constraintStart_toEndOf="@id/semicolon_tv"
        app:layout_constraintTop_toBottomOf="@id/time_morning_push_label_tv"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/period_push_label_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/period_push_label"
        android:textColor="@color/my_black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/spinner_morning_pushes_hours" />

    <Spinner
        android:id="@+id/spinner_period"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/spinner_back"
        android:entries="@array/periods"
        android:paddingStart="20dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="@id/period_push_label_tv"
        app:layout_constraintEnd_toEndOf="@id/spinner_morning_pushes_hours"
        app:layout_constraintTop_toBottomOf="@id/period_push_label_tv"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/back_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/go_back_label"
        android:textColor="@color/my_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toEndOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/ripple"
        android:fontFamily="@font/montserrat_bold"
        android:padding="13dp"
        android:stateListAnimator="@null"
        android:text="@string/save_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>